add support for Agent running on Java 6 (see http://jira.rhq-project.org/browse/RHQ-3)